--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "~1.0.0",
     "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
+    "dotenv": "^0.4.0",
     "express": "~4.0.0",
     "jade": "~1.3.0",
     "mongoose": "^3.8.16",
