--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
     "debug": "~0.7.4",
     "dotenv": "^0.4.0",
     "express": "~4.0.0",
+    "gulp": "^3.8.8",
     "jade": "~1.3.0",
     "mongoose": "^3.8.16",
     "morgan": "~1.0.0",
     "params": "^0.1.0",
     "static-favicon": "~1.0.0"
+  },
+  "devDependencies": {
+    "gulp-nodemon": "^1.0.4",
+    "gulp-stylus": "^1.3.3",
+    "stylus": "^0.48.1"
   }
 }
