--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "static-favicon": "~1.0.0"
   },
   "devDependencies": {
+    "gulp-browserify": "^0.5.0",
     "gulp-nodemon": "^1.0.4",
     "gulp-stylus": "^1.3.3",
     "stylus": "^0.48.1"
